--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,27 @@ services:
       - 8080:80
     environment:
       - PMA_ARBITRARY=1
+  elasticsearch:
+    container_name: es-container
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
+    environment:
+      - xpack.security.enabled=false
+      - "discovery.type=single-node"
+    networks:
+      - sail
+    ports:
+      - 9200:9200
+  kibana:
+    container_name: kb-container
+    image: docker.elastic.co/kibana/kibana:7.11.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://es-container:9200
+    networks:
+      - sail
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
 networks:
   sail:
     driver: bridge
