--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,21 @@ version: '3'
 services:
   laravel.test:
     build:
-      context: ./vendor/laravel/sail/runtimes/8.0
+      context: ./vendor/laravel/sail/runtimes/7.4
       dockerfile: Dockerfile
       args:
         WWWGROUP: '${WWWGROUP}'
-    image: sail-8.0/app
+    image: sail-7.4/app
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
     ports:
       - '${APP_PORT:-80}:80'
+      - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
     environment:
       WWWUSER: '${WWWUSER}'
       LARAVEL_SAIL: 1
+      XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+      XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
     volumes:
       - '.:/var/www/html'
     networks:
@@ -20,85 +25,74 @@ services:
     depends_on:
       - mysql
       - redis
-      # - selenium
-      # selenium:
-      #     image: 'selenium/standalone-chrome'
-      #     volumes:
-      #         - '/dev/shm:/dev/shm'
-      #     networks:
-      #         - sail
-      #     depends_on:
-      #         - laravel.test
+      - memcached
+      - selenium-hub
   mysql:
-    image: 'mysql:8.0'
+    image: 'mysql/mysql-server:8.0'
     ports:
       - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
       MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_ROOT_HOST: "%"
       MYSQL_DATABASE: '${DB_DATABASE}'
       MYSQL_USER: '${DB_USERNAME}'
       MYSQL_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
     volumes:
-      - 'sailmysql:/var/lib/mysql'
+      - 'sail-mysql:/var/lib/mysql'
+      - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
     networks:
       - sail
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
+      retries: 3
+      timeout: 5s
   redis:
     image: 'redis:alpine'
     ports:
       - '${FORWARD_REDIS_PORT:-6379}:6379'
     volumes:
-      - 'sailredis:/data'
+      - 'sail-redis:/data'
     networks:
       - sail
-  # memcached:
-  #     image: 'memcached:alpine'
-  #     ports:
-  #         - '11211:11211'
-  #     networks:
-  #         - sail
-  mailhog:
-    image: 'mailhog/mailhog:latest'
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      retries: 3
+      timeout: 5s
+  memcached:
+    image: 'memcached:alpine'
     ports:
-      - 1025:1025
-      - 8025:8025
+      - '11211:11211'
     networks:
       - sail
-  phpmyadmin:
-    networks:
-      - sail
-    image: phpmyadmin
-    restart: always
+  selenium-hub:
+    image: selenium/hub:3.141.59-20200326
+    container_name: ddev-selenium-hub
     ports:
-      - 8080:80
-    environment:
-      - PMA_ARBITRARY=1
-  elasticsearch:
-    container_name: es-container
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
-    environment:
-      - xpack.security.enabled=false
-      - "discovery.type=single-node"
+      - "4444:4444"
+      - "7900:7900"
     networks:
       - sail
-    ports:
-      - 9200:9200
-  kibana:
-    container_name: kb-container
-    image: docker.elastic.co/kibana/kibana:7.11.0
-    environment:
-      - ELASTICSEARCH_HOSTS=http://es-container:9200
-    networks:
-      - sail
+
+  chrome:
+    image: selenium/node-chrome:3.141.59-20200326
+    container_name: ddev-chrome
+    volumes:
+      - sail-chrome:/ddev/shm
     depends_on:
-      - elasticsearch
-    ports:
-      - 5601:5601
+      - selenium-hub
+    environment:
+      - HUB_HOST=selenium-hub
+      - HUB_PORT=4444
+    networks:
+      - sail
 networks:
   sail:
     driver: bridge
 volumes:
-  sailmysql:
+  sail-mysql:
     driver: local
-  sailredis:
+  sail-redis:
+    driver: local
+  sail-chrome:
     driver: local
